packages/svelte/tests/compiler-errors/samples/catch-before-closing/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'expected_token',
		message: 'Expected token {:else}',
		position: [35, 35]
	}
});
